--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,36 @@
-*{
+* {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  font-family: sans-serif;
-  /* outline: 1px solid yellow; */
+  font-family:"Roboto", sans-serif;
+  outline: 1px solid rgb(89, 255, 0);
+}
+:root{
+  --mainColor:#e3e8ee;
+}
+body {
+  background-color: var(--mainColor);
 }
 
-body{
-  background-color: rgb(227 232 238);
-}
 .text-center {
   text-align: center;
 }
-.text-style{
+
+.text-style {
   text-decoration: none;
   color: black;
 }
-.d-flex{
+
+.d-flex {
   display: flex;
 }
+
+.link {
+  text-decoration: none;
+}
+
 /* button  style */
-.btn{
+.bton {
   padding: 8px 15px;
   background-color: rgba(16, 141, 4, 0.84);
   color: white;
@@ -28,91 +38,124 @@ body{
   align-items: center;
   font-style: bold;
   font-size: 15px;
-  
+  gap: 10px;
 }
-.btn:hover {
+
+.bton:hover {
   cursor: pointer;
   opacity: 0.7;
 }
 
-.head{
-  width: 200px;
-  height: 50px;
- align-items: center;
- justify-content: space-between;
- background-color: rgb(255, 255, 255);
- padding:0px 15px;
- border-end-end-radius:  30px;
- border-start-end-radius:  30px;
- margin: 15px 0px 50px 0px;
- position: relative;
+.sideBar {
+  display: flex;
+  flex-direction: column;
+  height: 100% !important;
 }
-.head .logo{
+
+.head {
+  width: 240px;
+  height: 54px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+  padding: 0px 15px;
+  border-end-end-radius: 30px;
+  border-start-end-radius: 30px;
+  margin: 15px 0px 50px 0px;
+  position: relative;
+}
+
+.head .logo {
   position: absolute;
   top: -5px;
 }
-.head h1{
+
+.head h1 {
   font-size: 20px;
 }
-.p-btn{
-  width: 200px;
+
+/* button to add project */
+.p-btn {
+  width: 240px;
   padding: 15px 0px;
   background-color: transparent;
   color: rgb(0, 0, 0);
   font-size: 15px;
   border: none;
-  border-end-end-radius:  30px;
-  border-start-end-radius:  30px;
+  border-end-end-radius: 30px;
+  border-start-end-radius: 30px;
   cursor: pointer;
   justify-content: center;
   align-items: center;
 }
-.p-btn:hover{
+
+.p-btn:hover {
   background-color: rgba(84, 136, 122, 0.849);
 }
 
 
 /* project card */
-.project-card{
+.project-card {
   align-items: center;
-  width: 200px;
-  height: 40px;
+  justify-content: space-between;
+  width: 240px;
+  height: 46px;
   margin: 10px 0px;
+  padding: 4px 16px;
   /* background-color: rgb(255, 0, 0) 20%; */
-  border-left: 5px solid red;
-  border-end-end-radius:  30px;
-  border-start-end-radius:  30px;
-  padding: 10px 10px 15px 10px;
-  box-shadow: 0px 1px 2px rgba(0,0,0,.5);
-
+  border-left: 4px solid red;
+  border-end-end-radius: 30px;
+  border-start-end-radius: 30px;
+  /* padding: 10px 10px 15px 10px; */
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 
-.projTitle{
-  margin:0px 25px;
+.projTitle {
+  margin: 0px 25px;
   width: 100px;
   text-overflow: ellipsis;
-  text-wrap:nowrap;
+  text-wrap: nowrap;
   overflow: hidden;
   white-space: nowrap;
 }
-.project-card:hover{
+
+.project-card:hover {
   opacity: 0.7;
 }
-.project-card button{
+/*! -------------------------------------------------------- */
+.project-card #projectBtn-div {
   display: none;
 }
-.project-card:hover> button{
-  
+
+.project-card:hover>#projectBtn-div {
   display: block;
 }
+
+#projectBtn-div ul{
+  display: none;
+  position: absolute;
+  /* left: 220px; */
+  /* margin-top: 120px; */
+  background-color: white;
+  padding: 20px;
+  width: 240px;
+}
+#projectBtn-div ul{
+  list-style: none;
+}
+#projectBtn-div:hover>.threedot:hover +  ul{
+  display: block;
+}
+
+/*! -------------------------------------------------------- */
 /* side bottom bar */
 
-.sidebar-bottom{
-  /* position: absolute; */
+.sidebar-bottom {
+  position: relative;
 
   border: 1px solid rgba(128, 128, 128, 0.374);
-  /* width: 97%; */
-  /* bottom: 10px; */
+  width: 97%;
+  top: 20px;
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
   padding: 10px 15px;
@@ -120,68 +163,104 @@ body{
   justify-content: center;
   align-items: center;
   gap: 35px;
+  opacity: 60%;
+  margin-top: 30px;
 }
- .sidebar-bottom:hover{
+
+.sidebar-bottom:hover {
   border: 1px solid grey;
   transition: all .3s;
   cursor: pointer;
+  opacity: 90%;
 }
- .sidebar-bottom:hover>svg{
+
+.sidebar-bottom:hover>svg {
   fill: var(--clr-hover-icons);
 }
- .sidebar-bottom svg{
+
+.sidebar-bottom svg {
   width: 20px;
   height: 20px;
   fill: var(--clr-icons);
 
 }
 
-@media screen and (width<1037px){
-  .sideBar{
-      transition: all .4s;
 
-      margin-left: -150px;
-    box-shadow: 1px 0px 5px rgba(52, 46, 46, 0.644);
-  }
-  .sideBar:hover{
-    margin-left: 0px;
-  }
-}
 
 /* side bottom bar end */
 
-.container{
-  width: 800px;
-  min-height: 1100px;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 1px 1px 3px  rgba(0,0,0,.5);
+
+.main-content-citation{
+  width: 1000px;
   margin: auto;
-  padding: 20px 50px;
 }
-.sub-upper-part-2>p{
+.cite-container {
+  width: 820px;
+  min-height: 940px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
+  margin: auto;
+  padding: 10px 20px;
+}
+.sub-lower-part{
+  padding: 10px 0px;
+  min-height: 40px;
+  align-items: center;
+}
+.HomeCiteButton{
+  display: none;
+}
+.sub-lower-part:hover > .HomeCiteButton{
+  display: block;
+ 
+}
+.HomeCiteButton button{
+  border: none;
+  background: none;
+  margin:0 5px ;
+}
+
+.sub-upper-part-2>p {
   margin-right: 300px;
   font-size: 20px;
   font-weight: 600;
-  
+
 }
-.sub-upper-part, .sub-upper-part-2, .sub-lower-part{
+
+.sub-upper-part,
+.sub-upper-part-2,
+.sub-lower-part {
   justify-content: space-between;
 }
 
-.upperBar{
+.upperBar {
   justify-content: space-between;
   align-items: center;
-  margin: 30px;
-  width: 800px;
+  padding: 10px;
+  width: 840px;
+  height: 100px;
+  background-color: rgb(227 232 238);
+  z-index: 1;
+  margin: auto;
+}
+
+.sub-container-2 {
+  width: 780px;
+  height: 220px;
+  padding: 20px;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
 }
 
 
-.upperBar .file{
+.upperBar .file {
   border: 1px solid rgb(59, 51, 51);
   background-color: white;
-  border-left:none ;
+  border-left: none;
   color: black;
 }
+
 /* add-citation */
 /* .dialog{
   margin: auto;
@@ -191,65 +270,92 @@ body{
     background: rgba(0, 0, 0, 0.502);
 } */
 
- .add-citation-div{
+/* .add-citation-div{
   outline: 2px solid yellow;
   
-}
-.add-citation{
-   outline: 2px solid rgb(255, 77, 0);
-  width: 600px;
-  height: 500px;
+} */
+.add-citation {
+  /* outline: 2px solid rgb(255, 77, 0); */
+  width: 800px;
+  max-height: calc(-160px + 100vh);
+  min-height:  400px;
+  padding: 20px;
+  margin: auto;
   background: white;
-  position: relative;
-  /* border: 2px solid black; */
-  box-shadow: 1px 1px 5px #0000009e;
+  box-shadow: 2px 2px 5px #0000009e;
+  overflow: scroll;
+  position: absolute;
+  top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 3;
 }
+
 /* not working this prooperty */
-.add-citation::backdrop{
+.add-citation::backdrop {
   background: rgba(0, 0, 0, 0.502);
 }
- .add-citation .div-1{
+
+.add-citation .div-1 {
   justify-content: space-between;
+
 }
- .add-citation .div-2 .div-2-1 button,.div-2-2 button{
-  width: 120px;
+
+.div-2 {
+  width: 100%;
+  padding: 20px;
+}
+
+.add-citation .div-2 .div-2-1 button,
+.div-2-2 button {
+  width: 20%;
   height: 40px;
 }
-.dialog-btn{
+
+.div-2-2 {
+  background-color: var(--mainColor);
+  padding: 10px;
+}
+
+.dialog-btn {
   width: 40px;
   height: 40px;
   background: transparent;
   border: none;
 }
-.dialog-btn:hover{
+
+.dialog-btn:hover {
   cursor: pointer;
   border-radius: 20px;
-  background: rgba(84, 136, 122, 0.849);
+  background: var(--mainColor);
 }
-.div-2-2{
-  padding: 10px;
-}
-.dialog-input{
+
+.dialog-input {
   width: 370px;
   height: 40px;
   border: none;
   box-shadow: 0 0 2px black;
   padding-left: 10px;
 }
-.drag-drop{
+
+/* drag and drop */
+.drag-drop {
   /* margin: 40px 0; */
   padding: 20px;
   font-size: 16px;
   border: 6px dashed rgba(196, 196, 196, 0.995);
 }
-.add-manual{
+
+/* add manual */
+.add-manual {
   width: max-content;
-  margin:auto;
+  margin: auto;
   padding: 20px;
   border: 2px dashed black;
 
 }
-.more-part{
+
+.more-part {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -261,8 +367,9 @@ body{
   top: 80px;
   display: none;
 }
+
 /* .more-part .more{} */
-.more-part .more-text{
+.more-part .more-text {
   text-decoration: none;
   color: black;
   padding: 10px;
@@ -272,11 +379,16 @@ body{
 }
 
 /* import slide */
- .import-slide{
-  position: absolute;   
+.imactive {
+  display: none;
+}
+
+.import-slide {
+  position: absolute;
   background-color: white;
   box-shadow: 50px 50px 200px grey;
-  bottom: -100vh;
+  /* bottom: -100vh; */
+  bottom: 0px;
   right: 0;
   left: 0;
   height: 300px;
@@ -289,7 +401,8 @@ body{
   transition: all .2s;
 
 }
- .import-slide .close-btn{
+
+.import-slide .close-btn {
 
   width: 36px;
   position: absolute;
@@ -298,40 +411,239 @@ body{
   padding: 10px;
   border-radius: 50px;
 }
- .import-slide h2{
+
+.import-slide h2 {
   position: absolute;
   top: 20px;
   left: 47%;
   font-size: 25px;
 }
- .import-slide .close-btn:hover
-{
+
+.import-slide .close-btn:hover {
   background-color: rgba(0, 0, 0, 0.194);
   cursor: pointer;
 }
- .import-slide .import-card img{
+
+.import-slide .import-card img {
   width: 30px;
 
 }
- .import-slide .import-card{
- 
-padding: 20px;
 
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-gap: 5px;
-cursor: pointer;
-position: relative;
-width: 150px;
+.import-slide .import-card {
+
+  padding: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+  position: relative;
+  width: 150px;
 }
- .import-slide .import-card input{
+
+.import-slide .import-card input {
   font-size: 10px;
   position: absolute;
   bottom: -30px;
   left: 0;
 }
- .import-slide .import-card {
+
+.import-slide .import-card {
   border: 1px solid grey;
+}
+
+
+/* ---------------------------------------------------------- */
+.form .input-wrappers .inputs .textdiv {
+  width: 30%;
+}
+
+.form .input-wrappers .inputs input {
+  width: 50%;
+}
+
+.input-wrappers .textheader {
+  width: 18%;
+}
+
+.organizationName {
+  display: none;
+}
+
+/* artwork */
+
+.line {
+
+  border-top: 1px solid #ccc;
+  flex-grow: 1;
+  margin-right: 5px;
+}
+
+.input-div2-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 643px; */
+  height: 53px;
+  padding: 4px 10px;
+}
+
+.input-div2-1 input,
+.inp-nam,
+.organizationName,
+#annotation {
+  width: 430px;
+  height: 35px;
+  padding: 12px;
+  border: 2px solid #ffa500;
+}
+
+.labelText {
+  width: 150px;
+  margin-right: 10px;
+  font-size: 14px;
+  /* text-decoration-style:dotted ; */
+  text-decoration-line: underline;
+  text-decoration-style: dashed;
+
+}
+
+#annotation {
+  height: 100px;
+}
+
+.form-switch {
+
+  justify-content: center;
+  align-items: center;
+  margin-left: -350px;
+}
+
+.form-switch .labelText {
+  padding-right: 20px;
+  margin-right: 50px;
+}
+
+.preview-cite .preview{
+  width: 100%;
+  height: 100px;
+  background-color: var(--mainColor);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap:  20px;
+  margin: 50px 0px 0px 0px;
+  /* padding-left: 40px;   */
+}
+.preview span {
+  background-color: #ccd0d6;
+  padding: 5px 10px;
+  border-radius: 25px;
+}
+.preview-cite .bton{
+  background-color: #4285f4;
+  margin-top: 15px;
+ 
+}
+
+.zigzag {
+  position: relative;
+}
+
+.zigzag::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 30px;
+  background: linear-gradient(135deg, #fff 12px, transparent 0%),
+              linear-gradient(-135deg, #fff 12px, transparent 0%);
+  background-size: 30px;
+}
+
+.zigzag::before {
+  top: 0;
+}
+/* ---------------------------------------------------------- */
+
+.vertical-icons {
+  margin-top: 20px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color:white;
+  padding: 10px;
+border-radius: 12px 0px 0px 20px;
+
+}
+
+.vertical-icons .a {
+  display: block;
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+
+.vertical-icons .a img {
+  width: 25px; 
+  height: 25px; 
+  vertical-align: middle; /* Align icons vertically */
+}
+
+.vertical-icons .a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  /* Change background color on hover */
+}
+.lang{
+  
+ top: 90%;
+}
+
+
+/* ---------------------------------------------------------- */
+.delete-and-archive{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* width: 97%; */
+
+  border: 1px solid grey;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+
+
+}
+.delete-and-archive div{
+  width: 50%;
+  text-align: center;
+  padding: 7px;
+  cursor: pointer;
+
+}
+.delete-and-archive div:nth-child(1){
+  border-right: 1px solid grey;
+}
+.delete-and-archive svg{
+  width: 29px;
+
+  fill: grey;
+}
+.delete-and-archive div:hover>svg{
+  fill: var(--clr-hover-icons);
+}
+/* ---------------------------------------------------------- */
+
+
+
+@media screen and (width<1037px) {
+  .sideBar {
+    transition: all .4s;
+
+    margin-left: -150px;
+    box-shadow: 1px 0px 5px rgba(52, 46, 46, 0.644);
+  }
+
+  .sideBar:hover {
+    margin-left: 0px;
+  }
 }
